fixed spacing on main page and register page

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ body {
   margin-bottom: 20px;
 }
 
+.login-input{
+  margin-right: 12px;
+}
+
 .form-group {
   margin-bottom: 20px;
 }
@@ -51,6 +55,7 @@ body {
 }
 
 .form-group input {
+  margin-right: 10px;
   width: 100%;
   font-size: 20px;
   border-radius: 5px;
